# Api-Gerenciamento-de-Consultas-M-dicas

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  test_output.txt
.github/workflows/: ci-cd.yml  ci.yml
apps/appointments/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
apps/appointments/migrations/: 0001_initial.py
apps/auth/: urls.py  views.py
apps/core/: middleware.py  models.py
apps/professionals/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/professionals/migrations/: 0001_initial.py  0002_unique_constraints.py
config/: settings.py  urls.py  wsgi.py
